lab/k8s/ingress/ingress.yaml
# for versions before 1.14 use extensions/v1beta1
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: minikube.datalayer.io.local
   http:
     paths:
     - path: /*
       backend:
         serviceName: web
         servicePort: 8080
     - path: /v2/*
       backend:
         serviceName: web2
         servicePort: 8080
